--- a/appstate.json
+++ b/appstate.json
@@ -1,164 +1,1 @@
-[
-	{
-		"key": "sb",
-		"value": "OvF7YW_R7akuZig9VDEaPp5w",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.180Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "wd",
-		"value": "1536x746",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.212Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "datr",
-		"value": "OvF7YV-LvqncYzclln4b3yKR",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.215Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "dpr",
-		"value": "1.25",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.216Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "locale",
-		"value": "vi_VN",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.217Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "c_user",
-		"value": "100007450141047",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.218Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "spin",
-		"value": "r.1004641542_b.trunk_t.1635517496_s.1_v.2_",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.219Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "xs",
-		"value": "8%3ArhJOETjr_na5cw%3A2%3A1635517491%3A-1%3A6351%3A%3AAcXKIS_T9-tDnrlu3XEivA442DX7QVmDEq-fRqjPZw",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.219Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "fr",
-		"value": "04LmrmPOsdzAhm8C6.AWWtZ9XqvZDceARIpgsdfoTRfdo.BhfAUa.mQ.AAA.0.0.BhfAUa.AWVycAEqkwo",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.220Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "sb",
-		"value": "OvF7YW_R7akuZig9VDEaPp5w",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.180Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "wd",
-		"value": "1536x746",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.212Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "datr",
-		"value": "OvF7YV-LvqncYzclln4b3yKR",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.215Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "dpr",
-		"value": "1.25",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.216Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "locale",
-		"value": "vi_VN",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.217Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "c_user",
-		"value": "100007450141047",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.218Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "spin",
-		"value": "r.1004641542_b.trunk_t.1635517496_s.1_v.2_",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.219Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "xs",
-		"value": "8%3ArhJOETjr_na5cw%3A2%3A1635517491%3A-1%3A6351%3A%3AAcXKIS_T9-tDnrlu3XEivA442DX7QVmDEq-fRqjPZw",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.219Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	},
-	{
-		"key": "fr",
-		"value": "04LmrmPOsdzAhm8C6.AWWtZ9XqvZDceARIpgsdfoTRfdo.BhfAUa.mQ.AAA.0.0.BhfAUa.AWVycAEqkwo",
-		"domain": "facebook.com",
-		"path": "/",
-		"hostOnly": false,
-		"creation": "2021-10-30T00:58:15.220Z",
-		"lastAccessed": "2021-10-30T00:58:17.122Z"
-	}
-]
+datr=ZTzqZhnO8DVqTlJ9s9B_wTeT; sb=ZTzqZpwlPzHBrpkxT-rVVQhe; locale=en_US; vpd=v1%3B670x360x2; ps_l=1; ps_n=1; dpr=2.1988937854766846; c_user=61566141660734; fr=1VTkElcQ9tS03RUGM.AWXrTd_YPeTj35LOvqkwjgluutQ.Bm7PZU..AAA.0.0.Bm8QgY.AWX29oX97hA; xs=9%3AZRyEHMlRkhMYcQ%3A2%3A1727072281%3A-1%3A-1; m_page_voice=61566141660734; wd=360x670; fbl_st=101434281%3BT%3A28784976; wl_cbv=v2%3Bclient_version%3A2628%3Btimestamp%3A1727098594
